--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,9 @@
 }
 
 .container{
-    border: 1px solid black;
     height: 100%;
     width: 80%;
     margin: auto;
-    background-color: green;
     position: relative;
 }
 
@@ -21,11 +19,10 @@
 header{
     background-color: #3161e0;
     width: 100vw;
-    height: 80vh;
+    height: 75vh;
 }
 
 .menu{
-    border: 1px solid black;
     height: 10%;
     width: 100%;
     background-color: red;
@@ -36,12 +33,91 @@ header{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 1px solid black;
     height: 60%;
     width: 80%;
     background-color: yellow;
 }
 
-/* Tag main */
+/* tag main */
+
+.divisione{
+    width: 100vw;
+    height: 90vh;
+    border: 1px solid black;
+}
+
+.gray{
+    background-color: #f6f6f6;
+}
+
+.sinistra-uguale{
+    background-color: rgb(0, 183, 255);
+    height: 100%;
+    width: 60%;
+    display: inline-block;
+    border: 1px solid black;
+    position: absolute;
+}
+
+.destra-uguale{
+    background-color: orange;
+    height: 100%;
+    width: 40%;
+    margin-left: 60%;
+}
+
+#sinistra{
+    background-color: orchid;
+    height: 100%;
+    width: 40%;
+    position: absolute;
+}
+
+#destra{
+    background-color: sienna;
+    height: 100%;
+    width: 60%;
+    margin-left: 40%;
+
+}
+
+.divisione_finale{
+    width: 100vw;
+    height: 150vh;
+    border: 1px solid black;
+}
+
+#partesopra, #partebottom{
+    width: 100%;
+    height: 25%;
+    border: 1px solid black;
+    background-color: lime;
+}
+
+#partesotto{
+    width: 100%;
+    height: 50%;
+    background-color: maroon;
+}
+
+
 
 /* Tag footer */
+
+footer{
+    background-color: #23272a;
+    width: 100vw;
+    height: 85vh;
+}
+
+.sopra{
+    width: 100%;
+    height: 70%;
+    background-color: rgb(126, 15, 126);
+}
+
+.sotto{
+    width: 100%;
+    height: 30%;
+    background-color: mediumvioletred;
+}
