--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
     height: 100%;
     width: 70%;
     margin: auto;
-    position: relative;
 }
 
 .clearflix::after{
@@ -31,34 +30,25 @@ header{
     background-size: cover;
     width: 100vw;
     height: 70vh;
+    position: relative;
 }
 
-.menu{
-    height: 15%;
-    width: 100%;
-    padding-top: 20px;
-}
-
-#logo{
-    clear: left;
-    display:inline-block;
-}
-
-/* ul{
-    display: inline-block;
-    list-style-type: none;
-    padding: 0 20%;
-    clear: left;
-    padding-bottom: 20px;
-} */
 
 li{
     display: inline-block;
-    margin-left: 10%;
-    padding-right: 0.1%;
-    clear: left;
+    margin:40px 50px;
     color: #f4f6fd;
     font-size: 20px;
+    list-style-type: none;
+    text-align: center;
+}
+
+#accedi{
+    padding: 10px;
+    border-radius: 30px;
+    font-size: 20px;
+    background: #fff;
+    color: #2f3336;
 }
 
 .jumbotron{
@@ -67,7 +57,7 @@ li{
     left: 50%;
     transform: translate(-50%, -50%);
     height: 60%;
-    width: 80%;
+    width: 60%;
     background-color: yellow;
 }
 
@@ -76,7 +66,6 @@ li{
 .divisione{
     width: 100vw;
     height: 90vh;
-    border: 1px solid black;
 }
 
 .gray{
@@ -87,9 +76,6 @@ li{
     background-color: rgb(0, 183, 255);
     height: 100%;
     width: 60%;
-    display: inline-block;
-    border: 1px solid black;
-    position: absolute;
 }
 
 .destra-uguale{
@@ -103,7 +89,6 @@ li{
     background-color: orchid;
     height: 100%;
     width: 40%;
-    position: absolute;
 }
 
 #destra{
@@ -111,19 +96,16 @@ li{
     height: 100%;
     width: 60%;
     margin-left: 40%;
-
 }
 
 .divisione_finale{
     width: 100vw;
     height: 150vh;
-    border: 1px solid black;
 }
 
 #partesopra, #partebottom{
     width: 100%;
     height: 25%;
-    border: 1px solid black;
     background-color: lime;
 }
 
